kubernetes/volumes/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-frontend
  labels:
    app.kubernetes.io/part-of: lh-practice
    tier: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-backend
  labels:
    app.kubernetes.io/part-of: lh-practice
    tier: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-database
  labels:
    app.kubernetes.io/part-of: lh-practice
    tier: database
---
apiVersion: v1
kind: Namespace
metadata:
  name: artifact-registry
  labels:
    app.kubernetes.io/part-of: lh-practice
    tier: registry
